--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ var ParticlePool = (function() {
         align-items: center;
         justify-content: center;
         margin-bottom: 5px;
-        text-align: center;">Thúy Kiều!</div>
+        text-align: center;">K02!</div>
 
  </BODY>
 
